weatherapp-microservices/kubernetes/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      restartPolicy: Always            
      containers:
      - name: weatherapp-ui
        image: dockerle12/weatherapp-ui:v1
        imagePullPolicy: IfNotPresent  
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
