weatherapp-microservices/kubernetes/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
spec:
  selector:
    app.kubernetes.io/name: weatherapp-ui
  type: ClusterIP
  ports:
    - port: 3000           
      targetPort: http   
      protocol: TCP
      name: http
